--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,13 +4,33 @@
     android:layout_height="match_parent"
     android:background="@drawable/gradient_background">
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/relLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingLeft="24dp"
         android:paddingRight="24dp"
-        android:paddingTop="24dp">
+        android:paddingTop="0dp">
+
+
+        <!-- Handle Name Label -->
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:theme="@style/TextLabel"
+            android:id="@+id/handle_name_input">
+
+            <EditText
+                android:id="@+id/handle_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Handle Name (Anonymous)"
+                android:inputType="textPersonName"
+                android:textColor="@color/white" />
+        </android.support.design.widget.TextInputLayout>
 
         <!--  Email Label -->
         <android.support.design.widget.TextInputLayout
@@ -18,7 +38,10 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
-            android:theme="@style/TextLabel">
+            android:theme="@style/TextLabel"
+            android:id="@+id/email_input"
+            android:layout_below="@id/handle_name_input">
+
 
             <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
@@ -26,7 +49,7 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/input_email_login"
+                    android:id="@+id/input_email_signup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Email"
@@ -35,50 +58,59 @@
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"/>
 
+                <TextView android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:text="@string/beloit_email"
+                    android:id="@+id/auto_filled_text"
+                    android:textColor="@color/white_t75"
+                    android:gravity="right"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true">
+                </TextView>
+
             </RelativeLayout>
+
+
         </android.support.design.widget.TextInputLayout>
 
-        <!--  Password Label -->
+        <!-- Password Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:theme="@style/TextLabel">
+            android:layout_marginTop="0dp"
+            android:theme="@style/TextLabel"
+            android:id="@+id/password_input"
+            android:layout_below="@id/email_input">
 
             <EditText
-                android:id="@+id/input_password_login"
+                android:id="@+id/input_password_signup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Password"
                 android:inputType="textPassword"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white" />
+
         </android.support.design.widget.TextInputLayout>
 
+        <!-- Signup Button -->
         <android.support.v7.widget.AppCompatButton
-            android:id="@+id/btn_login"
+            android:id="@+id/btn_signup"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
             android:background="@drawable/white_rounded_button"
             android:padding="12dp"
-            android:text="Login" />
+            android:text="Create Account"
+            android:layout_below="@id/password_input"/>
 
-        <TextView
-            android:id="@+id/link_forgot_password"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:gravity="center"
-            android:text="Forgot your password"
-            android:textColor="@color/white_t75"
-            android:textSize="16dip" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <ProgressBar
-        android:id="@+id/progress_bar"
+        android:layout_below="@+id/relLayout1"
+        android:id="@+id/progressBar"
         android:background="@color/white"
         android:layout_width="75dp"
         android:layout_height="75dp"
@@ -86,15 +118,14 @@
         android:layout_marginBottom="10dp"/>
 
     <TextView
-        android:id="@+id/loading_signin"
+        android:id="@+id/loading_signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/progress_bar"
         android:layout_centerHorizontal="true"
         android:text="Signing up..."
-        android:layout_marginTop="325dp"
+        android:layout_marginTop="380dp"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20sp" />
-
 </RelativeLayout>
