--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,31 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <style name="AppTheme" parent="Theme.AppCompat">
+        <item name="colorAccent">@color/main_theme_orange</item>
     </style>
 
+
+    <style name="TextLabel" parent="glance_orange">
+        <!-- Hint color and label color in FALSE state -->
+        <item name="android:textColorHint">@color/white_t75</item>
+        <item name="android:textSize">20sp</item>
+        <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
+        <item name="colorAccent">@color/primary</item>
+        <item name="colorControlNormal">@color/white_t75</item>
+        <item name="colorControlActivated">@color/white_t75</item>
+    </style>
+
+    <style name="FullScreenTheme" parent="AppTheme">
+        <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="glance_orange" parent="Theme.AppCompat.Light.NoActionBar" >
+        <item name="colorAccent">@color/accent</item>
+        <item name="android:statusBarColor">@color/black</item>
+    </style>
 </resources>
