--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/input_email_login"
+                    android:id="@+id/email_login_input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Email"
@@ -34,7 +34,6 @@
                     android:textColor="@color/white"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"/>
-
             </RelativeLayout>
         </android.support.design.widget.TextInputLayout>
 
@@ -47,7 +46,7 @@
             android:theme="@style/TextLabel">
 
             <EditText
-                android:id="@+id/input_password_login"
+                android:id="@+id/password_login_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Password"
@@ -62,6 +61,7 @@
             android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
             android:background="@drawable/white_rounded_button"
+            android:textColor="@color/black"
             android:padding="12dp"
             android:text="Login" />
 
